lots of changes now is even usable

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fmenu</title>
+    <link rel="stylesheet" href="style.css  ">
 </head>
 <body>
     <div>
@@ -16,7 +17,7 @@
 
         <hr>
         <button id="btn-add">add</button>
-
+        <button id="btn-remove">remove</button>
 
     </div>
 
