changes o the dynamic of the extension lots of changes in th appearance

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="style.css  ">
 </head>
 <body>
-    <div>
-        <header>
-        <h1>fmenu</h1>
-        </header>
-        <hr>
-            <div class="containerApps"></div>
-            <div class="containerAddApps"></div>
+   <body>
+    <div class="main-layout"> 
+        
+        <div id="btns">
+            <button id="btn-add">Add App</button>
+            <button id="btn-remove">Remove App</button>
+        </div>
 
-        <hr>
-        <button id="btn-add">add</button>
-        <button id="btn-remove">remove</button>
-
+        <div class="containerApps"></div>
+        
+        <div class="containerAddApps"></div>
     </div>
+
+    <script src="index.js"></script>
+</body>
 
     <script src="index.js"></script>
 </body>
